[gd_scene load_steps=4 format=1]

[ext_resource path="res://addons/arc_dark/arc_dark.tres" type="Theme" id=1]
[ext_resource path="res://main.gd" type="Script" id=2]

[sub_resource type="GDScript" id=1]

script/source = "extends Button

# class member variables go here, for example:
# var a = 2
# var b = \"textvar\"

func _ready():
	# Called every time the node is added to the scene.
	# Initialization here
	pass
"

[node name="root" type="Control"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
theme/theme = ExtResource( 1 )
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menu_background" type="Panel" parent="."]

anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 30.0

[node name="version_lbl" type="Button" parent="menu_background"]

anchor/left = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 218.0
margin/top = -2.0
margin/right = 1.0
margin/bottom = -2.375
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "$$$"
flat = true
align = 2
script/script = SubResource( 1 )

[node name="re_editor_standalone" type="GodotREEditorStandalone" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 8.0
margin/top = 1.0
margin/right = 237.0
margin/bottom = 998.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="log_window_bg" type="Panel" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 28.0
margin/right = 0.0
margin/bottom = 0.0

[node name="log_window" type="RichTextLabel" parent="log_window_bg"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
custom_colors/default_color = Color( 0.470588, 0.45098, 0.45098, 1 )
custom_constants/line_separation = 5
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1
percent_visible = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="menu_background/version_lbl" to="." method="_on_version_lbl_pressed"]

[connection signal="write_log_message" from="re_editor_standalone" to="." method="_on_re_editor_standalone_write_log_message"]


